# SmartRoomController

./: Cargo.toml  flash
src/: clock.rs  controller.rs  display.rs  keypad.rs  main.rs  time_selector.rs
